workloads/wireguard/kustomize/general/deployment.yaml
---
# https://github.com/wg-easy/wg-easy/wiki/Using-WireGuard-Easy-with-Kubernetes
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wireguard-deployment
  labels:
    app.kubernetes.io/name: wireguard-deployment

spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: Recreate # Single instance only.

  selector:
    matchLabels:
      app.kubernetes.io/name: wireguard-pod

  template:
    metadata:
      labels:
        app.kubernetes.io/name: wireguard-pod

    spec:
      containers:
        - name: wireguard
          image: ghcr.io/wg-easy/wg-easy:15

          ports:
            - name: wg
              containerPort: 51820
              protocol: UDP
            - name: http
              containerPort: 51821
              protocol: TCP

          # resources:
          #   limits:
          #     cpu:  0m
          #     memory: 0Mi
          #   requests:
          #     cpu: 0m
          #     memory: 0Mi

          # Use the http server for pod health checks
          livenessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1

          # Give pod permissions to modify iptables and load the wireguard kernel module
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            sysctls:
              - name: net.ipv4.ip_forward
                value: "1"
              - name: net.ipv4.conf.all.forwarding
                value: "1"
              - name: net.ipv4.conf.all.src_valid_mark
                value: "1"

          volumeMounts:
            - name: wireguard-data
              mountPath: /etc/wireguard

      volumes:
        - name: wireguard-data
          persistentVolumeClaim:
            claimName: wireguard-pvc
