workloads/wireguard/kustomize/general/svc.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: wireguard-svc

  labels:
    app.kubernetes.io/name: wireguard-svc

spec:
  type: ClusterIP

  ports:
    - name: wireguard
      port: 51820
      protocol: UDP
      targetPort: wg

    - name: wireguard-http
      port: 51821
      protocol: TCP
      targetPort: http

  selector:
    app.kubernetes.io/name: wireguard-pod
