workloads/wireguard/kustomize/general/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: wireguard-https

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: https

  hostnames:
    - wireguard.sidewinder.lan

  rules:
    - backendRefs:
        - name: wireguard-svc # SVC name (internal IP:PORT).
          port: 51821
      # timeouts:
      #     request: 10s
      #     backendRequest: 10s
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: wireguard-http

spec:
  parentRefs:
    - name: primary-gateway
      namespace: envoy-gateway-system
      sectionName: http

  hostnames:
    - wireguard.sidewinder.lan

  rules:
    # - backendRefs:
    #     - name: wireguard-svc # SVC name (internal IP:PORT).
    #       port: 51821
    #   timeouts:
    #       request: 10s
    #       backendRequest: 10s
    #   matches:
    #     - path:
    #         type: PathPrefix
    #         value: /
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
